Edit featured image path

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <!-- Featured item 1 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="/assets/img/featured-1.jpg" alt="Nikko Apartments" class="thumb">
+                            <img src="./assets/img/featured-1.jpg" alt="Nikko Apartments" class="thumb">
                         </a>
                         <div class="body">
                             <h3 class="title">
@@ -167,7 +167,7 @@
                     <!-- Featured item 2 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="/assets/img/featured-2.jpg" alt="CouCou Homestead" class="thumb">
+                            <img src="./assets/img/featured-2.jpg" alt="CouCou Homestead" class="thumb">
                         </a>
                         <div class="body">
                             <h3 class="title">
@@ -190,7 +190,7 @@
                     <!-- Featured item 3 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="/assets/img/featured-3.jpg" alt="Lavis 18 Residence" class="thumb">
+                            <img src="./assets/img/featured-3.jpg" alt="Lavis 18 Residence" class="thumb">
                         </a>
                         <div class="body">
                             <h3 class="title">
