Fix bug in Client part

--- a/index.html
+++ b/index.html
@@ -73,11 +73,21 @@
                     <p class="desc">5 Star Ratings (2k+ Review)</p>
                 </div>
                 <div class="images">
-                    <img src="./assets/img/client-1.svg" alt="meUndies">
-                    <img src="./assets/img/client-2.svg" alt="slack">
-                    <img src="./assets/img/client-3.svg" alt="amazon">
-                    <img src="./assets/img/client-4.svg" alt="woocommerce">
-                    <img src="./assets/img/client-5.svg" alt="sitepoint">
+                    <a href="https://www.meundies.com/" target="_blank">
+                        <img src="./assets/img/client-1.svg" alt="meUndies">
+                    </a>
+                    <a href="https://slack.com/" target="_blank">
+                        <img src="./assets/img/client-2.svg" alt="slack">
+                    </a>
+                    <a href="https://www.amazon.com/" target="_blank">
+                        <img src="./assets/img/client-3.svg" alt="amazon">
+                    </a>
+                    <a href="https://woocommerce.com/" target="_blank">
+                        <img src="./assets/img/client-4.svg" alt="woocommerce">
+                    </a>
+                    <a href="https://www.sitepoint.com/" target="_blank">
+                        <img src="./assets/img/client-5.svg" alt="sitepoint">
+                    </a>
                 </div>
             </div>
         </div>
