--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-    <main style="height: 2000px;">
-        <!-- Header -->
-        <header class="header">
+    <main>
+        <header class="fix-header">
             <div class="content">
+                <!-- Navbar -->
                 <nav class="navbar">
                     <!-- Logo -->
                     <img src="./assets/img/Logo.svg" alt="Besnik.">
@@ -38,6 +38,12 @@
                     </div>
                 </nav>
 
+            </div>
+        </header>
+
+        <!-- Hero -->
+        <div class="hero-wrap">
+            <div class="content">
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -54,7 +60,7 @@
                     you'll love to live." class="hero-img" />
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- Clients -->
         <div class="clients">
