--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <main>
+    <main id="home">
         <header class="fix-header">
             <div class="content">
                 <!-- Navbar -->
@@ -25,11 +25,11 @@
                     <img src="./assets/img/Logo.svg" alt="Besnik.">
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Services</a></li>
-                        <li><a href="#!">Resources</a></li>
-                        <li><a href="#!">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                     <!-- Action -->
                     <div class="actions">
@@ -99,7 +99,7 @@
         </div>
 
         <!-- Guides -->
-        <div class="guides">
+        <div id="services" class="guides">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
@@ -141,7 +141,7 @@
         </div>
 
         <!-- Featured -->
-        <div class="featured">
+        <div id="features" class="featured">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -230,7 +230,7 @@
         </div>
 
         <!-- Stats -->
-        <div class="stats">
+        <div id="resources" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -320,7 +320,7 @@
         </div>
 
         <!-- Subscription -->
-        <div class="subscription">
+        <div id="contact" class="subscription">
             <div class="content">
                 <div class="body">
                     <div class="info">
