Center the Hero content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <!-- Navbar -->
                 <nav class="navbar">
                     <!-- Logo -->
-                    <img src="./assets/img/Logo.svg" alt="Besnik.">
+                    <a href="#">
+                        <img src="./assets/img/Logo.svg" alt="Besnik.">
+                    </a>
                     <!-- Navigation -->
                     <ul>
                         <li><a href="#home">Home</a></li>
@@ -44,21 +46,19 @@
         <!-- Hero -->
         <div class="hero-wrap">
             <div class="content">
-                <div class="hero">
-                    <div class="info">
-                        <p class="sub-title">Welcome to Besnik Agency</p>
-                        <h1 class="title">
-                            Discover a place
-                            you'll love to live.
-                        </h1>
-                        <p class="desc">Get the best real estate deals first,
-                            before they hit the mass market! hot foreclosure deals with one simple search.
-                        </p>
-                        <a href="#!" class="btn hero-cta">More About Us</a> <!-- cta nghĩa là Call to action -->
-                    </div>
-                    <img src="./assets/img/hero-img.svg" alt="Discover a place
-                    you'll love to live." class="hero-img" />
+                <div class="info">
+                    <p class="sub-title">Welcome to Besnik Agency</p>
+                    <h1 class="title">
+                        Discover a place
+                        you'll love to live.
+                    </h1>
+                    <p class="desc">Get the best real estate deals first,
+                        before they hit the mass market! hot foreclosure deals with one simple search.
+                    </p>
+                    <a href="#!" class="btn hero-cta">More About Us</a> <!-- cta nghĩa là Call to action -->
                 </div>
+                <img src="./assets/img/hero-img.svg" alt="Discover a place
+                    you'll love to live." class="hero-img" />
             </div>
         </div>
 
